# rust_sms_gate

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  run.sh
config/: log.yaml  log_client.yaml  log_server.yaml  message_receiver.json  setting.json  smsServer.json
src/: global.rs  lib.rs  main.rs  main_server.rs  main_test.rs  test.rs  test_main.rs  test_server.rs
src/clients/: Channel.rs  client_entity.rs  mod.rs
src/entity/: as_custom.rs  as_server.rs  attach_custom.rs  attach_server.rs  channel.rs  entity_manager.rs  entity_running.rs  mod.rs  services.rs  tcp_handle.rs
src/handle/: mod.rs
src/message_queue/: mod.rs  queue_handle.rs
src/message_queue/kafka/: consumer.rs  mod.rs  producer.rs
src/protocol/: cmpp.rs  cmpp32.rs  cmpp48.rs  implements.rs  mod.rs  msg_type.rs  names.rs  sgip.rs  smgp.rs  smpp.rs
src/protocol/cmpp/: mod.rs
src/runtime/: mod.rs
src/server/: mod.rs  server.rs
src/test/: entity.rs  mod.rs
test/: account.json  conn.json  conn2.json  sumbit.json
