[package]
name = "sms_gate"
version = "0.1.0"
authors = ["udbjqr <udbjqr@sohu.com>"]
edition = "2018"


[dependencies]
tokio = { version = "1.3.0", features = ["full", "tracing"] }
futures = "0.3.13"
num_cpus = "*"
encoding = "*"
rdkafka = "0.26.0"
log = "*"
rand = "*"
simple_logger = "*"
tokio-util = { version = "0.6.4", features = ["full"] }
bytes = "1.0.1"
json = "0.12.4"
md5 = "*"
chrono = "0.4.19"
