[package]
name = "sms_gate"
version = "0.3.4"
authors = ["udbjqr <udbjqr@sohu.com>"]
edition = "2018"


[dependencies]
tokio = { version = "1.3.0", features = ["full", "tracing"] }
futures = "0.3.13"
num_cpus = "*"
encoding = "*"
rdkafka = "0.26.0"
log = "*"
rand = "*"
simple_logger = "*"
tokio-util = { version = "0.6.4", features = ["full"] }
bytes = "1.0.1"
json = "0.12.4"
md5 = "*"
chrono = "0.4.19"
lazy_static = "*"
async-trait = "*"
log4rs =  { version = "1.0.0", features = ["background_rotation","gzip"] }

[[bin]]
name="sms_gate"
path= "src/main.rs"

[[bin]]
name="sms_gate_server"
path= "src/main_server.rs"

[[bin]]
name="sms_gate_test"
path= "src/main_test.rs"

[[bin]]
name="test_server"
path= "src/test_server.rs"